cmake_minimum_required (VERSION 3.4)
project (TSP_GA)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
find_package(SDL2 REQUIRED)
include_directories(${SDL2_INCLUDE_DIR})
file(GLOB tsp_src "*.h" "*.cpp")
add_executable(TSP_GA ${tsp_src})
target_link_libraries(TSP_GA ${SDL2_LIBRARY})

